<resources>
    <string name="app_name">H2Grow</string>
    <string name="search_hint">Search Your Plants</string>
    <string name="search_title">Search Your Plants</string>
    <string name="required">*</string>
    <string name="requiredField">* required</string>
    <string name="action_settings">Settings</string>
    <string name="add_title">New Plant</string>
    <string name="add_plant_name">Name of plant:</string>
    <string name="add_plant_type">Scientific name:</string>
    <string name="add_plant_comm">Common name:</string>
    <string name="add_pic">Picture:</string>
    <string name="add_water">Water schedule (days):</string>
    <string name="add_water_1">Watering interval: every</string>
    <string name="add_water_2">hours.</string>
    <string name="detail_plant_name">Plant Name</string>
    <string name="no_plant_message">No Plants In Your List!</string>
    <string name="no_plant_tip">Please use the "+" button in the bottom right to add a plant</string>
    <string name="editPlant">Edit Plant</string>



</resources>
